Added login token verification, all-tests route, data fetch

--- a/Usuario/index.html
+++ b/Usuario/index.html
@@ -13,6 +13,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet" />
 	<script src="index.js"></script>
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
 <body onload="loadExamenes()">
@@ -23,7 +24,7 @@
 		</a>
 		<div class="header-hrefs">
 			<a href="f"> PERFIL </a>
-			<a href="g"> CERRAR SESIÓN </a>
+			<a href="" id="logout-link"> CERRAR SESIÓN </a>
 		</div>
 	</div>
 	<div class="cobertor">
