Added routes and functionality to register partial tests

--- a/Usuario/index.html
+++ b/Usuario/index.html
@@ -40,6 +40,7 @@
 			document.getElementById('myModal').style.display = 'block';
 			var nuevaCita = document.getElementById('nuevaCita');
 			nuevaCita.textContent = 'Nueva cita ' + test;
+			actualTest = test;
 			var selectOptions = document.getElementById('selectOptions');
 			selectOptions.style.display = 'none';
 		}
