--- a/Veterinario/citas.html
+++ b/Veterinario/citas.html
@@ -7,6 +7,7 @@
     <title>Sistema Veterinario</title>
     <link rel="stylesheet" href="index.css" />
     <script src="citas.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
