--- a/Veterinario/parasitologia.html
+++ b/Veterinario/parasitologia.html
@@ -100,7 +100,7 @@
 						<p>Nombre</p>
 					</div>
 					<div class="col6">
-						<input type="text" id="nombre" value="Lucky">
+						<input type="text" id="nombrem" value="Lucky">
 					</div>
 				</div>
 				<div class="linea">
@@ -124,8 +124,8 @@
 					<div class="col4">
 						<select name="sexo" id="sexo">
 							<option>Seleccione</option>
-							<option value="macho">Macho</option>
-							<option value="hembra">Hembra</option>
+							<option value="masculino">Macho</option>
+							<option value="femenino">Hembra</option>
 						</select>
 					</div>
 					<div class="col5">
@@ -212,7 +212,7 @@
 				<div class="miC1">
 					<p>resultados</p>
 				</div>
-				<div class="miC3">
+				<div class="miC3" id="resultados">
 					<p></p>
 				</div>
 			</div>
@@ -223,7 +223,7 @@
 			<div class="interT" id="interT">
 				<p>Observaciones</p>
 			</div>
-			<div class="interTxt" id="interTxt">
+			<div class="interTxt" id="observacion">
 				<textarea id="interpretacion"></textarea>
 			</div>
 		</div>
