--- a/Usuario/index.html
+++ b/Usuario/index.html
@@ -13,6 +13,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet" />
 	<script src="index.js"></script>
+	<script src="pdf_info.js"></script>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
+
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
