fixed pdf and Usuario

--- a/Usuario/index.html
+++ b/Usuario/index.html
@@ -33,7 +33,7 @@
 	<div class="cobertor">
 		<div class="title">
 			<p id="morado">Bienvenido</p>
-			<p id="negro">Nombre Nombre</p>
+			<p id="negro"></p>
 		</div>
 
 		<div id="contenido"></div>
