--- a/Veterinario/reportes.html
+++ b/Veterinario/reportes.html
@@ -77,7 +77,7 @@
                 <input type="month" name="mes" id="mes">
             </div>
             <div class="reportes">
-                <div class="graficos">
+                <div class="graficos" onclick="window.location.href = './pdf/grafico.html'">
                     <p>Reporte gráficos</p>
                 </div>
                 <div class="tabla">
