--- a/Veterinario/reportes.html
+++ b/Veterinario/reportes.html
@@ -80,7 +80,7 @@
                 <div class="graficos" onclick="window.location.href = './pdf/grafico.html'">
                     <p>Reporte gráficos</p>
                 </div>
-                <div class="tabla">
+                <div class="tabla" onclick="window.location.href = './pdf/tabla.html'">
                     <p>Reporte tabla</p>
                 </div>
             </div>
