Changed routes and html for pdf

--- a/pages/index.html
+++ b/pages/index.html
@@ -24,7 +24,7 @@
           <br><br>
           <div><input type="checkbox" class="rell" id="perfil"> </input></div>
           <div class="divadmin">
-          <p class="admin">¿Eres administrador?</p>
+          <p class="admin">¿Eres veterinario?</p>
 </div>
           
           <button type="button" class="btn btn-primary">Iniciar sesión</button>
@@ -32,7 +32,7 @@
           <br>
           <br>
           <br>
-          <p class="noti">¿No tienes cuenta? inicia sesion <a class="enlac" href="/d"><strong>aqui</strong></a> </p>
+          <p class="noti">¿No tienes cuenta? Regístrate aquí <a class="enlac" href="registro.html"><strong>aqui</strong></a> </p>
         </form>
       </div>
     </div>
