--- a/pages/registro.html
+++ b/pages/registro.html
@@ -33,7 +33,7 @@
           <br><br><br>
           
           
-          <p class="noti">Ya tienes cuenta? inicia sesion <a class="enlac" href="/d"><strong>aqui</strong></a> </p>
+          <p class="noti">Ya tienes cuenta? Inicia sesion <a class="enlac" href="index.html"><strong>aqui</strong></a> </p>
         </form>
       </div>
     </div>
