--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,7 @@
           <br>
           <br>
           <br>
-          <p class="noti">¿No tienes cuenta? Regístrate aquí <a class="enlac" href="registro.html"><strong>aqui</strong></a> </p>
+          <p class="noti">¿No tienes cuenta? Regístrate <a class="enlac" href="registro.html"><strong>aqui</strong></a> </p>
         </form>
       </div>
     </div>
