--- a/Veterinario/parasitologia.html
+++ b/Veterinario/parasitologia.html
@@ -213,7 +213,7 @@
 					<p>resultados</p>
 				</div>
 				<div class="miC3" id="resultados">
-					<p></p>
+					<input type="text">
 				</div>
 			</div>
 			<div class="linea">
